# r2m_4wd_diff_drive

./: .gitmodules  README.md  hardware_stack.sh
.VSCodeCounter/2025-05-01_12-16-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: docker-push.yml
docker/: build.yml  docker-compose-hardware.yml  docker-compose-joysticks.yaml  docker-compose.yml
odrive_config/: can_simple.py  endpoints_json.json  odrive_config_1.json  odrive_config_2.json  odrive_config_3.json  odrive_config_4.json
ros2_control_demos/example_2/bringup/config/: diffbot_controllers.yaml
ros2_control_demos/example_2/description/ros2_control/: diffbot.ros2_control.xacro
ros2_control_demos/example_2/description/urdf/: diffbot.urdf.xacro
ros2_control_demos/example_2/ros2_control/: diffbot.ros2_control.xacro
ros2_control_demos/r2m_4wd_diff_description/: CMakeLists.txt  package.xml
ros2_control_demos/r2m_4wd_diff_description/r2m_4wd_diff_description/urdf/: r2m_4wd_diff_description.urdf.xacro
ros2_control_demos/ros2_control_demo_description/diffbot/urdf/: diffbot_description.urdf.xacro
